<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutJunior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JuniorAthleteFragment">

    <EditText
        android:id="@+id/etJName"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etJBirthDate"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/birth_date"
        android:importantForAutofill="no"
        android:inputType="datetime|date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etJName"
        app:layout_constraintTop_toBottomOf="@+id/etJName" />

    <EditText
        android:id="@+id/etJNeighborhood"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/neighborhood"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etJBirthDate"
        app:layout_constraintTop_toBottomOf="@+id/etJBirthDate" />

    <EditText
        android:id="@+id/etJYearOfPractice"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/years_of_practice"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etJNeighborhood"
        app:layout_constraintTop_toBottomOf="@+id/etJNeighborhood" />

    <Button
        android:id="@+id/btnJSave"
        android:layout_width="276dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pink"
        android:text="@string/saveBtn"
        android:textColor="@color/material_dynamic_neutral_variant10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etJYearOfPractice" />

    <TextView
        android:id="@+id/tvJResult"
        android:layout_width="279dp"
        android:layout_height="289dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJSave" />
</androidx.constraintlayout.widget.ConstraintLayout>